Fix: Play buttons background magenta > contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ body {
   padding: 2vw;
   font-weight: bold;
   font-family: "Mouse Memoirs", sans-serif;
-  background: #F76548;
+  background: magenta;
   color: #FFEC3D;
   border-radius: 20px;
   border: none;
